; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/cfi/extr_cfi.c_setplr.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/cfi/extr_cfi.c_setplr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_WRONLY = common dso_local global i32 0, align 4
@CFIOCSPLR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"ioctl(CFIOCPLR)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @setplr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setplr() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @O_WRONLY, align 4
  %3 = call i32 @getfd(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* @CFIOCSPLR, align 4
  %6 = call i64 @ioctl(i32 %4, i32 %5, i32 0)
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 @err(i32 -1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %0
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @close(i32 %11)
  ret void
}

declare dso_local i32 @getfd(i32) #1

declare dso_local i64 @ioctl(i32, i32, i32) #1

declare dso_local i32 @err(i32, i8*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
